MODIFY add gcp cloud deployment

--- a/aws/cloudformation/applications/ecs/ecr.yaml
+++ b/aws/cloudformation/applications/ecs/ecr.yaml
@@ -1,25 +1,14 @@
 AWSTemplateFormatVersion: 2010-09-09
-
-Parameters:
-  RepositoryName:
-    Description: An ECR repository name
-    Type: String
+Description: >
+  Create ECR repository for application
 
 Resources:
-
-  ECRRepositoryDemo:
+  S3Demo1ECRRepository:
     Type: AWS::ECR::Repository
     Properties:
-      RepositoryName: !Ref RepositoryName
-      # ImageScanningConfiguration: Json
-      # ImageTagMutability: String
-      # LifecyclePolicy:
-      #   LifecyclePolicy
-      # RepositoryPolicyText: Json
-      # Tags:
-      #   - Tag
+      RepositoryName: s3-demo1
 
 Outputs:
-  ECRRepository:
-    Description: A reference to the created ECR Repository
-    Value: !Ref ECRRepositoryDemo
+  S3Demo1ECRRepository:
+    Description: Refrence to S3 Demo1 ECR Repo
+    Value: !Ref S3Demo1ECRRepository
